--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -64,6 +64,8 @@ p{
 }
 div.maskabout{
     background-color: rgb(139 102 102 / 28%);
-    width: 50%;
+    width: 70%;
     border-radius: 20px;
+    margin: 0px auto;
+    padding: 30px 30px;
   }
