--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -64,7 +64,7 @@ p{
 }
 
 div.maskabout{
-    padding: 30px 40px;
+    padding: 30px 40px 1px;
     background-color: rgb(139 102 102 / 28%);
     border-radius: 20px;
     width: 70%;
