--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -82,3 +82,10 @@ div.maskabout{
     border-radius: 100% 0% 10% 100%;
     font-size: 1.5rem;
 }
+
+.nigger{
+    left: unset;
+    right: 0%;
+    top: 0%;
+    bottom: unset;
+}
