--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -180,3 +180,14 @@ div.maskabout{
   height: auto;
   border-radius: 12px;
 }
+
+.about-maxwellimage img:hover {
+  transform: scale(1.05) rotate(2deg);
+  transition: all 0.3s ease;
+}
+
+.about-maxellimage {
+  flex: 0.5;
+  min-width: 150px;
+  text-align: center;
+}
