--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -176,19 +176,21 @@ div.maskabout{
   transition: all 0.3s ease;
 }
 
-.about-maxellimage img {
+.end-image {
+  flex: 0.5;
+  min-width: 150px;
+  text-align: center;
+}
+
+
+.end-image img {
   max-width: 200%;
   height: auto;
   border-radius: 12px;
 }
 
-.about-maxwellimage img:hover {
+
+.end-image img:hover {
   transform: scale(1.05) rotate(2deg);
   transition: all 0.3s ease;
-}
-
-.about-maxellimage {
-  flex: 0.5;
-  min-width: 150px;
-  text-align: center;
 }
